updating name again

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="dimgray" media="(prefers-color-scheme: dark)" />
     <meta name="description" content="Smooth Hacker News" />
-    <title>Phreak News</title>
+    <title>Lacquer News</title>
     <link rel="icon" href="favicon.ico" sizes="any" />
     <link rel="stylesheet" href="style/main.css" />
     <script src="script/client.js"></script>
