refactoring entire page class, changing markup, updating styles and methods

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="script/store.js"></script>
     <script src="script/model.js"></script>
     <script src="script/view.js"></script>
+    <script src="script/item.js"></script>
     <script src="script/page.js"></script>
   </head>
   <body>
