fixing onReply logic, using template for form

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <script src="script/item.js"></script>
     <script src="script/page.js"></script>
   </head>
+  <template id="reply">
+    <form method="post">
+      <textarea name="text"></textarea>
+      <button type="submit">submit</button>
+    </form>
+  </template>
   <template id="item">
     <article>
       <h1><a target="_blank"></a></h1>
