renaming and refactoring item methods, adding more styles, restructuring h2, styling h2

--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
   <template id="reply">
     <form method="post">
       <textarea name="text"></textarea>
-      <button type="submit">submit</button>
+      <button type="submit">Submit</button>
     </form>
   </template>
   <template id="item">
     <article>
       <h1><a target="_blank"></a></h1>
       <h2>
+        <b></b>
+        <i></i>
         <span></span>
         <time></time>
-        <button name="reply">⮢</button>
+        <button name="reply">➦</button>
       </h2>
       <details>
         <summary></summary>
