adding upvote and downvote arrows, adding more styles, adding comment depth background color, refining padding

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <h1><a target="_blank"></a></h1>
       <h2>
         <b></b>
+        <button name="upvote">▲</button>
+        <button name="downvote">▼</button>
         <i></i>
         <span></span>
         <time></time>
