adding login tab for read-only local site, removing login tab when site is served, BUG triage - null returning from HN sometimes handled

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <a href="#ask" role="tab">Ask</a>
         <a href="#show" role="tab">Show</a>
         <a href="#job" role="tab">Jobs</a>
+        <a href="#login" role="tab">Login</a>
       </nav>
       <app-page id="top" role="tabpanel" class="active"></app-page>
       <app-page id="new" role="tabpanel"></app-page>
@@ -67,6 +68,7 @@
       <app-page id="ask" role="tabpanel"></app-page>
       <app-page id="show" role="tabpanel"></app-page>
       <app-page id="job" role="tabpanel"></app-page>
+      <aside id="login" role="tabpanel">To login go here</aside>
     </main>
   </body>
 </html>
