--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="script/item.js"></script>
     <script src="script/page.js"></script>
     <script src="script/tabs.js"></script>
+    <script src="script/app.js"></script>
     <script src="script/main.js"></script>
   </head>
   <template id="reply">
