--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
       <aside id="login" role="tabpanel">
         <h1>This is a static site</h1>
         <p>
-          Loggin in is not supported by the Hacker News API.
+          Login is not supported by the Hacker News API.
           <br />
-          As a workaround, you need to run this repository locally.
+          As a workaround clone and run this repository locally, and use the cookie safely in an environment variable.
           <ol>
             <li>Clone the <a href="https://github.com/proc0/HackerZen" target="_blank">repo</a>.</li>
             <li>Install dependencies.</li>
